# microcontrollers

./: LICENSE  README.md
stm32/discF407G/quick-template/: Cargo.toml  Embed.toml  embed.sh  memory.x
stm32/discF407G/quick-template/.cargo/: config
stm32/discF407G/quick-template/src/: main.rs
stm32/nucleoF446RE/quick-template/: Cargo.toml  Embed.toml
stm32/nucleoF446RE/quick-template/.cargo/: config
stm32/nucleoF446RE/quick-template/src/: main.rs
